# sidewalk-registry

./: .gitignore
.github/workflows/: etl.yml  web-ci.yml
pipeline/: pyproject.toml
pipeline/registry/: overlay.yaml  sources.schema.json
pipeline/src/sidewalk_pipeline/: cli.py  export_tiles.py  export_vector.py  fetch.py  normalize.py  registry_build.py  schema.py  split.py  upload_blob.py
pipeline/upload/: package.json  upload-blob.mjs
web/: next.config.ts  package-lock.json  package.json
web/public/registry/: sources.json
web/src/app/: layout.tsx  page.tsx
web/src/app/catalog/: page.tsx
web/src/app/catalog/[provinceCode]/: page.tsx
web/src/app/catalog/[provinceCode]/[municipalitySlug]/: page.tsx
web/src/app/download/: page.tsx
web/src/components/catalog/: CoverageBadge.tsx  GapNotice.tsx  SourceTable.tsx
web/src/components/download/: DownloadCard.tsx
web/src/components/map/: NationalMap.tsx
web/src/lib/: categories.ts  downloads.ts  registry.ts  types.ts
