[project]
name = "sidewalk-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "geopandas>=1.0.1",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "pyarrow>=21.0.0",
    "pyogrio>=0.11.1",
    "pyyaml>=6.0.3",
    "shapely>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sidewalk_pipeline"]
